# locness-dash

./: .env.example  .gitignore  README.md  app.py  config.toml  data.py  load_summary_stats.py  ph_style_test.html  plots.py  pyproject.toml  railway.toml  requirements.txt  run.ps1  run.sh  sample_data_setup.py  sqlite_summary.py  test_parquet_summary.py
.github/: copilot-instructions.md
.github/instructions/: instructions.md
scripts/: parquet_summary.py
